--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,5 @@
+cmake_minimum_required(VERSION 2.8)
+
 include_directories(glad lodepng)
 
 add_executable(main glad/egl.c glad/gl.c lodepng/lodepng.cpp egl_example.cpp)
