--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
+find_package(OpenGL)
 
 include_directories(glad lodepng)
 
@@ -6,6 +7,6 @@ add_executable(main glad/egl.c glad/gl.c lodepng/lodepng.cpp egl_example.cpp)
 add_executable(query_devices glad/egl.c glad/gl.c lodepng/lodepng.cpp query_devices.cpp)
 add_executable(test_device glad/egl.c glad/gl.c lodepng/lodepng.cpp test_device.cpp)
 
-target_link_libraries(main dl pthread)
-target_link_libraries(query_devices dl pthread)
-target_link_libraries(test_device dl pthread)
+target_link_libraries(main dl pthread EGL ${OPENGL_LIBRARIES})
+target_link_libraries(query_devices dl pthread EGL ${OPENGL_LIBRARIES})
+target_link_libraries(test_device dl pthread EGL ${OPENGL_LIBRARIES})
